<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_interfaces</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  
  <!-- 編譯完自定義的訊息後，這些訊息需要被轉換成 C++ 或 Python 可以讀取的程式碼。在程式執行時（例如 ros2 run ...），系統需要這個 runtime 庫來處理這些資料格式的序列化與反序列化（把資料轉成網路封包）。 -->
  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <!-- 將套件標記為一個「介面套件 (Interface Package)」 -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
